# ktrem

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  search.rs
src/model/: config.rs  index.rs  mod.rs  note.rs
src/store/: index.rs  mod.rs  scratch.rs  zettelkasten.rs
src/ui/: help.rs  layout.rs  mod.rs  preview.rs  scratch.rs  wizard.rs  workspace_switch.rs  zettelkasten.rs
